Test focus zoom fix on mobile

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,3 +3,9 @@
 body {
   @apply bg-black;
 }
+
+input,
+select,
+textarea {
+  font-size: 16px;
+}
